--- a/docs/latex/optables_8hpp_source.tex
+++ b/docs/latex/optables_8hpp_source.tex
@@ -2,20 +2,34 @@
 \hypertarget{optables_8hpp_source}{}\label{optables_8hpp_source}\index{include/optables.hpp@{include/optables.hpp}}
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{00001\ \textcolor{preprocessor}{\#ifndef\ OPTABLES\_HPP}}
-\DoxyCodeLine{00002\ \textcolor{preprocessor}{\#define\ OPTABLES\_HPP}}
-\DoxyCodeLine{00003\ }
-\DoxyCodeLine{00004\ \textcolor{preprocessor}{\#include\ <string>}}
-\DoxyCodeLine{00005\ \textcolor{preprocessor}{\#include\ <unordered\_map>}}
-\DoxyCodeLine{00006\ }
-\DoxyCodeLine{00007\ \textcolor{preprocessor}{\#include\ "{}AST.hpp"{}}}
-\DoxyCodeLine{00008\ }
-\DoxyCodeLine{00009\ \textcolor{keyword}{using\ }optable}
-\DoxyCodeLine{00010\ \ \ =\ std::unordered\_map<\ std::string,}
-\DoxyCodeLine{00011\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ std::unordered\_map<\ addr\_mode\_id,\ uint8\_t\ >\ >;}
-\DoxyCodeLine{00012\ }
-\DoxyCodeLine{00013\ \textcolor{keyword}{extern}\ optable\ opc6502;}
+\DoxyCodeLine{00001\ }
+\DoxyCodeLine{00002\ }
+\DoxyCodeLine{00003\ \textcolor{preprocessor}{\#ifndef\ OPTABLES\_HPP}}
+\DoxyCodeLine{00004\ \textcolor{preprocessor}{\#define\ OPTABLES\_HPP}}
+\DoxyCodeLine{00005\ }
+\DoxyCodeLine{00006\ \textcolor{preprocessor}{\#include\ <set>}}
+\DoxyCodeLine{00007\ \textcolor{preprocessor}{\#include\ <string>}}
+\DoxyCodeLine{00008\ \textcolor{preprocessor}{\#include\ <unordered\_map>}}
+\DoxyCodeLine{00009\ }
+\DoxyCodeLine{00010\ \textcolor{preprocessor}{\#include\ "{}AST.hpp"{}}}
+\DoxyCodeLine{00011\ }
+\DoxyCodeLine{00012\ \textcolor{keyword}{using\ }optable}
+\DoxyCodeLine{00013\ \ \ =\ std::unordered\_map<\ std::string,\ std::unordered\_map<\ addr\_mode\_id,\ uint8\_t\ >\ >;}
 \DoxyCodeLine{00014\ }
-\DoxyCodeLine{00015\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{00015\ \textcolor{keyword}{extern}\ optable\ opc6502;}
+\DoxyCodeLine{00016\ }
+\DoxyCodeLine{00018\ \textcolor{keyword}{const}\ \textcolor{keyword}{static}\ std::set<\ std::string\ >\ mode\_imp\_instructions}
+\DoxyCodeLine{00019\ \ \ =\ \{\ \textcolor{stringliteral}{"{}tax"{}},\ \textcolor{stringliteral}{"{}tay"{}},\ \textcolor{stringliteral}{"{}tsx"{}},\ \textcolor{stringliteral}{"{}txa"{}},\ \textcolor{stringliteral}{"{}txs"{}},\ \textcolor{stringliteral}{"{}tya"{}},\ \textcolor{stringliteral}{"{}pha"{}},\ \textcolor{stringliteral}{"{}php"{}},\ \textcolor{stringliteral}{"{}pla"{}},}
+\DoxyCodeLine{00020\ \ \ \ \ \ \ \textcolor{stringliteral}{"{}plp"{}},\ \textcolor{stringliteral}{"{}dex"{}},\ \textcolor{stringliteral}{"{}dey"{}},\ \textcolor{stringliteral}{"{}inx"{}},\ \textcolor{stringliteral}{"{}iny"{}},\ \textcolor{stringliteral}{"{}brk"{}},\ \textcolor{stringliteral}{"{}rti"{}},\ \textcolor{stringliteral}{"{}rts"{}},\ \textcolor{stringliteral}{"{}clc"{}},}
+\DoxyCodeLine{00021\ \ \ \ \ \ \ \textcolor{stringliteral}{"{}cld"{}},\ \textcolor{stringliteral}{"{}cli"{}},\ \textcolor{stringliteral}{"{}clv"{}},\ \textcolor{stringliteral}{"{}sec"{}},\ \textcolor{stringliteral}{"{}sed"{}},\ \textcolor{stringliteral}{"{}sei"{}},\ \textcolor{stringliteral}{"{}nop"{}}\ \};}
+\DoxyCodeLine{00022\ }
+\DoxyCodeLine{00024\ \textcolor{keyword}{const}\ \textcolor{keyword}{static}\ std::set<\ std::string\ >\ mnems\_instructions}
+\DoxyCodeLine{00025\ \ \ =\ \{\ \textcolor{stringliteral}{"{}adc"{}},\ \textcolor{stringliteral}{"{}and"{}},\ \textcolor{stringliteral}{"{}asl"{}},\ \textcolor{stringliteral}{"{}bcc"{}},\ \textcolor{stringliteral}{"{}bcs"{}},\ \textcolor{stringliteral}{"{}beq"{}},\ \textcolor{stringliteral}{"{}bit"{}},\ \textcolor{stringliteral}{"{}bmi"{}},\ \textcolor{stringliteral}{"{}bne"{}},\ \textcolor{stringliteral}{"{}bpl"{}},\ \textcolor{stringliteral}{"{}brk"{}},}
+\DoxyCodeLine{00026\ \ \ \ \ \ \ \textcolor{stringliteral}{"{}bvc"{}},\ \textcolor{stringliteral}{"{}bvs"{}},\ \textcolor{stringliteral}{"{}clc"{}},\ \textcolor{stringliteral}{"{}cld"{}},\ \textcolor{stringliteral}{"{}cli"{}},\ \textcolor{stringliteral}{"{}clv"{}},\ \textcolor{stringliteral}{"{}cmp"{}},\ \textcolor{stringliteral}{"{}cpx"{}},\ \textcolor{stringliteral}{"{}cpy"{}},\ \textcolor{stringliteral}{"{}dec"{}},\ \textcolor{stringliteral}{"{}dex"{}},}
+\DoxyCodeLine{00027\ \ \ \ \ \ \ \textcolor{stringliteral}{"{}dey"{}},\ \textcolor{stringliteral}{"{}eor"{}},\ \textcolor{stringliteral}{"{}inc"{}},\ \textcolor{stringliteral}{"{}inx"{}},\ \textcolor{stringliteral}{"{}iny"{}},\ \textcolor{stringliteral}{"{}jmp"{}},\ \textcolor{stringliteral}{"{}jsr"{}},\ \textcolor{stringliteral}{"{}lda"{}},\ \textcolor{stringliteral}{"{}ldx"{}},\ \textcolor{stringliteral}{"{}ldy"{}},\ \textcolor{stringliteral}{"{}lsr"{}},}
+\DoxyCodeLine{00028\ \ \ \ \ \ \ \textcolor{stringliteral}{"{}nop"{}},\ \textcolor{stringliteral}{"{}ora"{}},\ \textcolor{stringliteral}{"{}pha"{}},\ \textcolor{stringliteral}{"{}php"{}},\ \textcolor{stringliteral}{"{}pla"{}},\ \textcolor{stringliteral}{"{}plp"{}},\ \textcolor{stringliteral}{"{}rol"{}},\ \textcolor{stringliteral}{"{}ror"{}},\ \textcolor{stringliteral}{"{}rti"{}},\ \textcolor{stringliteral}{"{}sbc"{}},\ \textcolor{stringliteral}{"{}sed"{}},}
+\DoxyCodeLine{00029\ \ \ \ \ \ \ \textcolor{stringliteral}{"{}sei"{}},\ \textcolor{stringliteral}{"{}sta"{}},\ \textcolor{stringliteral}{"{}stx"{}},\ \textcolor{stringliteral}{"{}sty"{}},\ \textcolor{stringliteral}{"{}tax"{}},\ \textcolor{stringliteral}{"{}tay"{}},\ \textcolor{stringliteral}{"{}tsx"{}},\ \textcolor{stringliteral}{"{}txa"{}},\ \textcolor{stringliteral}{"{}txs"{}},\ \textcolor{stringliteral}{"{}tya"{}}\ \};}
+\DoxyCodeLine{00030\ }
+\DoxyCodeLine{00031\ \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
